--- a/htdocs/gcc-4.0/buildstat.html
+++ b/htdocs/gcc-4.0/buildstat.html
@@ -23,6 +23,14 @@ Installing GCC: Final Installation</a>.</p>
 <table>
 
 <tr>
+<td>alphaev68-dec-osf5.1b</td>
+<td>Tru64 5.1B</td>
+<td>Bootstrap (C,C++):
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01668.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
 <td>crx-unknown-elf</td>
 <td>cross compiler</td>
 <td>Test results using simulator:
@@ -64,6 +72,14 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Fedora Core 3, glibc 2.3.5, kernel 2.6.11</td>
+<td>Bootstrap (Ada,C,C++,F95,Java):
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01533.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Mandrake 10.1, glibc 2.3.3, kernel 2.6.8</td>
 <td>Bootstrap (Ada, C, C++, Obj-C, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01258.html">4.0.0</a>
@@ -90,6 +106,14 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 9, glibc 2.3.2, kernel 2.4.20</td>
+<td>Bootstrap (C,C++):
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01402.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>SuSE Personal 9.1, glibc 2.3.3, kernel 2.6.5</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01316.html">4.0.0</a>
@@ -101,6 +125,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>SuSE 9.2, glibc 2.3.3, kernel 2.6.8</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01235.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-mingw32</td>
+<td>MinGW i386 on Windows XP</td>
+<td>Bootstrap (C,C++):
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01630.html">4.0.0</a>
 </td>
 </tr>
 
@@ -117,6 +149,30 @@ Installing GCC: Final Installation</a>.</p>
 <td>binutils 2.15</td>
 <td>Bootstrap (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01261.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-apple-darwin7.9.0</td>
+<td>Mac OS 10.3.9</td>
+<td>Bootstrap (C,F95):
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01648.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-ibm-aix5.1.0.0</td>
+<td>AIX 5.1</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01414.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-ibm-aix5.2.0.0</td>
+<td>AIX 5.2 ML05</td>
+<td>Bootstrap (C,C++,Java,Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2005-04/msg01615.html">4.0.0</a>
 </td>
 </tr>
 
