--- a/htdocs/gcc-4.0/buildstat.html
+++ b/htdocs/gcc-4.0/buildstat.html
@@ -60,6 +60,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01904.html">4.0.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01794.html">4.0.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01660.html">4.0.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01616.html">4.0.0</a>,
@@ -161,6 +162,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-apple-darwin7.9.0</td>
+<td>&nbsp</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01996.html">4.0.0</a>
+</td>
+</td>
+
+<tr>
 <td>powerpc-ibm-aix5.1.0.0</td>
 <td>AIX 5.1</td>
 <td>Bootstrap:
@@ -185,6 +194,32 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc64-unknown-linux-gnu</td>
+<td>&nbsp</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01997.html">4.0.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01996.html">4.0.0</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01901.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>s390-ibm-linux-gnu</td>
+<td>&nbsp</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01835.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>s390x-ibm-linux-gnu</td>
+<td>&nbsp</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01836.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
 <td>sparc-sun-solaris2.7</td>
 <td>binutils 2.15.92 20050420</td>
 <td>Bootstrap (C, C++, Obj-C):
@@ -204,6 +239,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.9</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01937.html">4.0.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01642.html">4.0.0</a>
 </td>
 </tr>
