--- a/htdocs/gcc-4.0/buildstat.html
+++ b/htdocs/gcc-4.0/buildstat.html
@@ -163,7 +163,7 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>powerpc-apple-darwin7.9.0</td>
-<td>&nbsp</td>
+<td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01996.html">4.0.0</a>
 </td>
@@ -195,7 +195,7 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>powerpc64-unknown-linux-gnu</td>
-<td>&nbsp</td>
+<td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01997.html">4.0.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01996.html">4.0.0</a>,
@@ -205,7 +205,7 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>s390-ibm-linux-gnu</td>
-<td>&nbsp</td>
+<td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01835.html">4.0.0</a>
 </td>
@@ -213,7 +213,7 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>s390x-ibm-linux-gnu</td>
-<td>&nbsp</td>
+<td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01836.html">4.0.0</a>
 </td>
