* done.html: Remove links to Freestyler Toolkit.

--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -183,16 +183,13 @@
       <!-- End WebMiel -->
      <!-- Freestyler -->
       <tr valign="top">
-        <td><b><a href="http://www.freestyler-toolkit.org/">Freestyler Toolkit</a></b></td>
+        <td><b>Freestyler Toolkit</b></td>
 
 	<td>The Freestyler Toolkit facilitates building with GCJ. 
 		It focuses on simplifying the construction of 
 		SWT Graphical User Interfaces and
 		XmlRpc servants that sit before MySQL database
 		backends. 
-		<a
-href="http://www.freestyler-toolkit.org/freestyler/linux-kerneled-Gtk2.html#linux-ke
-rneled%2fGtk2">Screenshots</a> are here.
 	</td>
 	<td><a href="mailto:erik.poupaert@skynet.be">Erik Poupaert</a>
 	</td>
