--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -575,7 +575,7 @@ names.
   <li>EG3 maintains a list of compiler Internet resources, including FAQ's,
 papers, hot list pages, potential software/shareware, all known companies, etc.:
   <ul>
-    <li><a href="http://www.eg3.com/softd/compiler.htm">http://www.eg3.com/softd/compiler.htm</a></li>
+    <li><a href="http://www.eg3.com/embeddedsoftware/compiler.htm">http://www.eg3.com/embeddedsoftware/compiler.htm</a></li>
     <li>These resource pages are published as part of EG3's Free Electronic Engineers' Toolbox at:
     <ul>
       <li><a href="http://www.eg3.com/index.htm">http://www.eg3.com/index.htm</a></li>
