--- a/htdocs/projects/cfg.html
+++ b/htdocs/projects/cfg.html
@@ -461,7 +461,7 @@ MICRO-27.</a></dd>
 
 <dt><a name="3">[3]</a></dt>
 
-<dd><a href="http://citeseer.ist.psu.edu/337544.hmtml">Design and
+<dd><a href="http://citeseer.ist.psu.edu/337544.html">Design and
 Analysis of Profile-Based Optimization in Compaq's Compilation
 Tools for Alpha; Journal of Instruction-Level Parallelism 3 (2000)
 1-25</a></dd>
