Request that patch submissions for the web pages have [wwwdocs] in the subject.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -470,8 +470,11 @@ be prefixed with the initials of the distributing organization.</p>
 
 <p>The web pages for the GCC project are also in the CVS repository
 and you can check them out, submit patches, etc just like you do for
-the compiler itself.  Use <code>cvs co -P wwwdocs</code> to check out
-the web pages.</p>
+the compiler itself.</p>
+
+<p>Use <code>cvs co -P wwwdocs</code> to check out the web pages.</p>
+
+<p>Patches should be marked with the tag [wwwdocs] in the subject line.</p>
 
 <h2><a name="system">The host system</a></h2>
 
