--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -163,6 +163,8 @@ file" mode of the validator.</p>
 &lt;html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"&gt;
 </pre></blockquote>
 
+<p>Please mark patches with the tag [wwwdocs] in the subject line.</p> 
+
 
 <h2><a name="patches">Submitting Patches</a></h2>
 
