--- a/htdocs/gcc-4.0/buildstat.html
+++ b/htdocs/gcc-4.0/buildstat.html
@@ -220,6 +220,30 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>sparc-sun-solaris2.5.l</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-05/msg00036.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.6</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-05/msg00037.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.7</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-05/msg00038.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
 <td>sparc-sun-solaris2.7</td>
 <td>binutils 2.15.92 20050420</td>
 <td>Bootstrap (C, C++, Obj-C):
@@ -231,6 +255,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.8</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-05/msg00040.html">4.0.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01623.html">4.0.0</a>
 </td>
 </tr>
@@ -245,11 +270,27 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>sparc-sun-solaris2.10</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-05/msg00042.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
 <td>sparc-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01646.html">4.0.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01529.html">4.0.0</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc64-sun-solaris2.9</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-05/msg00041.html">4.0.0</a>
 </td>
 </tr>
 
@@ -266,6 +307,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>x86_64-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2005-05/msg00035.html">4.0.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01629.html">4.0.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2005-04/msg01615.html">4.0.0</a>
 </td>
