Add Openbench link.

--- a/htdocs/benchmarks/index.html
+++ b/htdocs/benchmarks/index.html
@@ -61,5 +61,12 @@ levels.  Results can be found at <a href="http://annwm.lbl.gov/bench/">
 http://annwm.lbl.gov/bench/</a>.
 </p>
 
+<h2>Openbench</h2>
+
+<p>
+<a href="http://www.exactcode.de/oss/openbench/">Openbench</a> is an
+open source benchmarking suite similar to SPEC.
+</p>
+
 </body>
 </html>
